# lead-gen-video-workflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/hooks/: cleanup-worktrees.sh
.claude/workflows/: repo-cleanup.js  slop-defense-sweep.js
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-11T15-04-37-713Z.yml  page-2026-06-11T15-05-37-388Z.yml  page-2026-06-11T15-06-16-434Z.yml  page-2026-06-11T15-06-34-460Z.yml  page-2026-06-11T15-06-41-821Z.yml  page-2026-06-11T15-06-50-934Z.yml  page-2026-06-11T15-08-44-210Z.yml  page-2026-06-11T16-02-52-353Z.yml  page-2026-06-11T16-04-11-425Z.yml  page-2026-06-11T16-07-04-889Z.yml
apps/api/: CLAUDE.md  app.py  common.py  dependencies.py  main.py
apps/connectors/: CLAUDE.md  __init__.py
apps/web/: CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/worker/: CLAUDE.md  __init__.py  main.py
docs/: 2026-06-22-seedance-audio-reference-enhancement-plan.md  2026-06-22-seedance-t2v-thin-slice-plan.md  README.md  ROADMAP.md  design-decisions.md  milestones.md  modules.md  operations.md  repo-cleanup-inventory.md  repo-cleanup-log.md  repo-cleanup-pr.md  spec-questions.md  technical-choices.md  树影_Cutagent_CleanSlate重写Spec_v3_2026-06-11.md
docs/audit/: architecture-assessment-2026-06-13.md  parity-check-2026-06-12.json  spec-gap-audit-2026-06-11.json
docs/cleanup/: 2026-06-14-report.md
docs/milestones/: M1-contracts-freeze.md  M2-single-source-of-truth.md  M3-temporal-runtime.md  M4-events-observability.md  M5-acceptance-gate.md  M6L-realrun-durable-fixes.md  M6M-oss-strict-alignment.md  M6N-robust-oss-transfer.md  M6O-tiered-ephemeral-storage.md  M6P-hydrate-media-assets.md  M6Q-M6R-acceptance.md  M6Q-provider-observability.md  M6R-prompt-groups.md  M6S-M6T-acceptance.md  M6S-reference-extraction.md  M6T-broll-preview-usage-ledger.md  M6V-B-migration-script.md  M6V-asset-migration.md  M6V-migration-complete.md  M6a-frontend-studio.md  M6aR-frontend-redesign.md  M6b-real-media.md  M6d-fix-live-connectivity.md  M6d-real-providers.md  M6e-parity-gaps.md  M6f-objectstore-publish-ia.md  M6g-media-deep.md  M6h-jianying-draft.md  M6i-real-provider-wireup.md  M6j-ui-flatten-stable.md  M6k-disk-rootcause.md  M6kD-seed-skip-if-exists.md  M7-arch-hardening-acceptance.md  M7B-arch-later-acceptance.md
docs/ops/: dashscope-asr.md  objectstore-gc.md  objectstore-oss.md  provider-observability.md
scripts/: bootstrap_database.py  cache_status.py  ci_gate.sh  ci_preflight_gate.sh  clean_dangling_materials.py  dev_up.sh  export_openapi.py  gc_objectstore.py  generate_keyframes.py  migrate.py  migrate_buckets.py  migrate_legacy_assets.py  migrate_unify_video_kind.py  provision_oss_cors.py  sync_materials.py
tests/: CLAUDE.md  conftest.py
tests/api/: _upload_helpers.py  test_annotation_batch.py  test_annotation_patch.py  test_annotation_patch_bgm.py  test_auth.py  test_bgm_annotation_run.py  test_case_agent_source_bindings.py  test_case_rubric_loop.py  test_cases_delete.py  test_cases_profile.py  test_cost_estimate.py  test_creator_isolation.py  test_digital_human_batch.py  test_event_stream_connection_gauge.py  test_health_preflight.py  test_health_redis_required.py  test_idempotency_body_cap.py  test_jianying_draft_export.py  test_job_script_version_link.py  test_media_replacement.py  test_object_store_backends.py  test_object_store_cache_integrity.py  test_object_store_materials_routing.py  test_object_store_presign.py  test_ops_governance_api.py  test_provider_observability.py  test_provider_price_items.py  test_provider_profile_ssrf.py  test_publish_accounts.py  test_publish_batches_case_filter.py  test_publish_copy_cover_endpoints.py  test_publish_login.py  test_publish_spool_cleanup.py  test_publishing_copy_llm_wiring.py  test_publishing_funnel.py  test_publishing_sql_pin.py  test_reference_extract_endpoint.py  test_run_card_title.py  (+9 more)
(+371 files in other folders)
