[project]
name = "cutagent-cleanslate"
version = "0.1.0"
description = "Clean-slate implementation of the Cutagent Case-first digital human production system."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124",
  "pydantic>=2.10",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "psycopg[binary]>=3.2",
  "temporalio>=1.28",
  "prometheus-client>=0.25",
  "httpx>=0.28",
  "uvicorn[standard]>=0.34",
  "python-multipart>=0.0.20",
  "boto3>=1.35",
  "yt-dlp>=2025.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]
