[project]
name = "cutagent-cleanslate"
version = "0.1.0"
description = "Clean-slate implementation of the Cutagent Case-first digital human production system."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124",
  "pydantic>=2.10",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "psycopg[binary]>=3.2",
  "temporalio>=1.28",
  "prometheus-client>=0.25",
  "httpx>=0.28",
  "uvicorn[standard]>=0.34",
  "python-multipart>=0.0.20",
  "cryptography>=43",
  "boto3>=1.35",
  "redis>=5",
  "yt-dlp>=2025.1",
  "playwright>=1.50",
  "websockets>=12",
  "opencv-python-headless>=4.8",
  "numpy>=2.0",
  "librosa>=0.11",
  "scenedetect>=0.7",
  "pysilero-vad>=2.0",
  "jieba>=0.42",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
  # Required by the OceanEngine offline-import connector tests (xlsx fixtures).
  # The connector treats openpyxl as optional at runtime, but CI must install it
  # so tests/connectors/test_oceanengine_import.py actually runs instead of being
  # silently skipped by pytest.importorskip.
  "openpyxl>=3.1",
  "ruff>=0.15.19",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -p no:xdist"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"packages/core/storage/alembic/env.py" = ["E402"]
"packages/core/storage/object_store.py" = ["E402"]
"scripts/bootstrap_database.py" = ["E402"]
"scripts/export_openapi.py" = ["E402"]
"tests/conftest.py" = ["E402"]
"tests/connectors/test_oceanengine_import.py" = ["E402"]
"tests/temporal/test_temporal_runtime.py" = ["E402"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]
